--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Fonts */
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&family=News+Cycle:wght@700&display=swap");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700&family=News+Cycle:wght@700");
 @import url("https://use.fontawesome.com/releases/v5.0.10/css/all.css");
 
 /* Components */
