--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url("components/lines.css");
 @import url("components/buttons.css");
 @import url("components/images.css");
+@import url("components/dropdowns.css");
 
 body {
   margin: 0;
@@ -19,10 +20,10 @@ body {
 }
 .container {
   width: 700px;
-  height: 1000px;
+  height: 832px;
   /*max-width: 900px;*/
   margin: 50px 0;
-  padding: 0 72px 0 72px;
+  padding: 0 160px 0 72px;
 }
 
 /* Header style */
@@ -95,13 +96,14 @@ body {
 .form-agreement {
   display: flex;
   color: rgba(160, 160, 160, 1);
-  justify-content: space-between;
+  justify-content: left;
   align-items: center;
 }
 
 .form-agreement p {
   font-size: 13px;
   letter-spacing: -0.25px;
+  padding-left: 16px;
 }
 
 /* Form submission part */
@@ -138,7 +140,7 @@ body {
 
 .story {
   width: 700px;
-  height: 1000px;
+  height: 832px;
   background-image:
     linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     url('https://source.unsplash.com/1024x600/?hot,air,balloon');
